@@ -16,7 +16,7 @@
  */
 package org.apache.sis.console;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.EnumSet;
 import java.util.function.Predicate;
 import org.opengis.metadata.Metadata;
@@ -72,7 +72,7 @@ final class MetadataCommand extends FormattedOutputCommand {
         if (metadata != null) {
             if (!(metadata instanceof Metadata)) {
                 final DefaultMetadata md = new DefaultMetadata();
-                md.setReferenceSystemInfo(Collections.singleton((ReferenceSystem) metadata));
+                md.setReferenceSystemInfo(Set.of((ReferenceSystem) metadata));
                 metadata = md;
             }
             format(metadata);
