@@ -18,7 +18,6 @@ package org.apache.sis.feature.builder;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -334,7 +333,7 @@ public class FeatureTypeBuilder extends TypeBuilder {
                 role = null;
             }
             if (role != null) {
-                final Set<AttributeRole> rc = Collections.singleton(role);
+                final Set<AttributeRole> rc = Set.of(role);
                 if (property instanceof AbstractOperation) {
                     for (final String dependency : ((AbstractOperation) property).getDependencies()) {
                         propertyRoles.merge(dependency, rc, AttributeRole::merge);
@@ -413,7 +412,7 @@ public class FeatureTypeBuilder extends TypeBuilder {
      * @see DefaultFeatureType#getSuperTypes()
      */
     public DefaultFeatureType[] getSuperTypes() {
-        return superTypes.toArray(new DefaultFeatureType[superTypes.size()]);
+        return superTypes.toArray(DefaultFeatureType[]::new);
     }
 
     /**
@@ -1015,7 +1014,7 @@ public class FeatureTypeBuilder extends TypeBuilder {
                 }
             }
             feature = new DefaultFeatureType(identification(), isAbstract(),
-                    superTypes.toArray(new DefaultFeatureType[superTypes.size()]),
+                    superTypes.toArray(DefaultFeatureType[]::new),
                     ArraysExt.resize(propertyTypes, propertyCursor));
         }
         return feature;
@@ -1025,7 +1024,7 @@ public class FeatureTypeBuilder extends TypeBuilder {
      * Helper method for creating identification info of synthetic attributes.
      */
     private static Map<String,?> name(final GenericName name) {
-        return Collections.singletonMap(AbstractOperation.NAME_KEY, name);
+        return Map.of(AbstractOperation.NAME_KEY, name);
     }
 
     /**
