@@ -17,9 +17,9 @@
 package org.apache.sis.filter;
 
 import java.util.Arrays;
+import java.util.Set;
 import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.StringJoiner;
 import org.apache.sis.feature.Features;
@@ -78,7 +78,7 @@ final class AssociationValue<V> extends LeafExpression<AbstractFeature, V>
      * @param  accessor  expression to use for evaluating the property value after the last element of the path.
      */
     AssociationValue(final List<String> path, final PropertyValue<V> accessor) {
-        this.path = path.toArray(new String[path.size()]);
+        this.path = path.toArray(String[]::new);
         this.accessor = accessor;
     }
 
@@ -105,7 +105,7 @@ final class AssociationValue<V> extends LeafExpression<AbstractFeature, V>
      */
     @Override
     protected final Collection<?> getChildren() {
-        return Collections.singleton(getXPath());
+        return Set.of(getXPath());
     }
 
     /**
