@@ -16,9 +16,8 @@
  */
 package org.apache.sis.feature;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.HashMap;
@@ -107,7 +106,7 @@ public final strictfp class FeatureFormatTest extends TestCase {
      * Convenience method returning the given name in a {@code properties} map.
      */
     private static Map<String,?> name(final String name) {
-        return Collections.singletonMap(DefaultFeatureType.NAME_KEY, name);
+        return Map.of(DefaultFeatureType.NAME_KEY, name);
     }
 
     /**
@@ -148,7 +147,7 @@ public final strictfp class FeatureFormatTest extends TestCase {
         final AbstractFeature feature = isSparse ? new SparseFeature(type) : new DenseFeature(type);
         feature.setPropertyValue("city", "Tokyo");
         feature.setPropertyValue("population", 13185502);                               // In 2011.
-        feature.setPropertyValue("universities", Arrays.asList("Waseda", "Keio"));
+        feature.setPropertyValue("universities", List.of("Waseda", "Keio"));
         feature.setPropertyValue("temperature", Float.NaN);
 
         final FeatureFormat format = create();
