@@ -16,9 +16,9 @@
  */
 package org.apache.sis.feature;
 
-import java.util.Arrays;
+import java.util.Map;
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.metadata.quality.DataQuality;
 import org.opengis.metadata.quality.Element;
 import org.opengis.metadata.quality.Result;
@@ -147,7 +147,7 @@ public abstract strictfp class FeatureTestCase extends TestCase {
     @Test
     public void testGetProperty() {
         final DefaultFeatureType type = new DefaultFeatureType(
-                Collections.singletonMap(DefaultFeatureType.NAME_KEY, "My shapefile"), false, null,
+                Map.of(DefaultFeatureType.NAME_KEY, "My shapefile"), false, null,
                 DefaultAttributeTypeTest.attribute("COMMUNE"),
                 DefaultAttributeTypeTest.attribute("REF_INSEE"),
                 DefaultAttributeTypeTest.attribute("CODE_POSTAL"));
@@ -246,9 +246,9 @@ public abstract strictfp class FeatureTestCase extends TestCase {
          * Set the attribute value on a property having [0 … ∞] multiplicity.
          * The feature implementation should put the value in a list.
          */
-        assertEquals("universities", Collections.emptyList(), getAttributeValue("universities"));
+        assertEquals("universities", List.of(), getAttributeValue("universities"));
         feature.setPropertyValue("universities", "University of arts");
-        assertEquals("universities", Collections.singletonList("University of arts"), getAttributeValue("universities"));
+        assertEquals("universities", List.of("University of arts"), getAttributeValue("universities"));
         /*
          * Switch to 'getProperty' mode only after we have set at least one value,
          * in order to test the conversion of existing values to property instances.
@@ -344,18 +344,18 @@ public abstract strictfp class FeatureTestCase extends TestCase {
     @DependsOnMethod("testSimpleProperties")
     public void testAddToCollection() {
         feature = createFeature(new DefaultFeatureType(
-                Collections.singletonMap(DefaultFeatureType.NAME_KEY, "City"),
+                Map.of(DefaultFeatureType.NAME_KEY, "City"),
                 false, null, DefaultAttributeTypeTest.universities()));
         /*
-         * The value below is an instance of Collection<String>. But as of Java 8, the <String> parameterized type
-         * cannot be verified at runtime. The best check we can have is Collection<?>, which does not allow addition
-         * of new values.
+         * The value below is an instance of Collection<String>.
+         * But the <String> parameterized type cannot be verified at runtime.
+         * The best check we can have is Collection<?>, which does not allow addition of new values.
          */
         Collection<?> values = (Collection<?>) feature.getPropertyValue("universities");
         assertTrue("isEmpty", values.isEmpty());
         // Cannot perform values.add("something") here.
 
-        feature.setPropertyValue("universities", Arrays.asList("UCAR", "Marie-Curie"));
+        feature.setPropertyValue("universities", List.of("UCAR", "Marie-Curie"));
         values = (Collection<?>) feature.getPropertyValue("universities");
         assertArrayEquals(new String[] {"UCAR", "Marie-Curie"}, values.toArray());
     }
