@@ -16,8 +16,8 @@
  */
 package org.apache.sis.feature.builder;
 
+import java.util.Map;
 import java.util.Iterator;
-import java.util.Collections;
 import com.esri.core.geometry.Geometry;
 import com.esri.core.geometry.Point;
 import org.opengis.geometry.Envelope;
@@ -373,7 +373,7 @@ public final strictfp class FeatureTypeBuilderTest extends TestCase {
         final DefaultFeatureType parentType = builder.build();
 
         builder = new FeatureTypeBuilder().setName("Child").setSuperTypes(parentType);
-        builder.addProperty(FeatureOperations.link(Collections.singletonMap(AbstractOperation.NAME_KEY, "B"), pa));
+        builder.addProperty(FeatureOperations.link(Map.of(AbstractOperation.NAME_KEY, "B"), pa));
         final DefaultFeatureType childType = builder.build();
 
         final Iterator<? extends AbstractIdentifiedType> it = childType.getProperties(true).iterator();
