@@ -16,7 +16,7 @@
  */
 package org.apache.sis.internal.feature.jts;
 
-import java.util.Collections;
+import java.util.Map;
 import org.opengis.geometry.MismatchedDimensionException;
 import org.opengis.util.FactoryException;
 import org.opengis.referencing.operation.TransformException;
@@ -66,7 +66,7 @@ public final strictfp class JTSTest extends TestCase {
         /*
          * Test CRS as map value.
          */
-        geometry.setUserData(Collections.singletonMap(JTS.CRS_KEY, CommonCRS.NAD83.geographic()));
+        geometry.setUserData(Map.of(JTS.CRS_KEY, CommonCRS.NAD83.geographic()));
         assertEquals(CommonCRS.NAD83.geographic(), JTS.getCoordinateReferenceSystem(geometry));
         /*
          * Test CRS as srid.
