@@ -16,10 +16,11 @@
  */
 package org.apache.sis.internal.metadata;
 
-import java.util.Arrays;
+import java.util.Map;
+import java.util.Set;
+import java.util.List;
 import java.util.Locale;
 import java.util.Iterator;
-import java.util.Collections;
 import java.nio.charset.StandardCharsets;
 import org.opengis.metadata.citation.Citation;
 import org.opengis.metadata.content.ContentInformation;
@@ -55,7 +56,7 @@ public final strictfp class MergerTest extends TestCase {
         final DefaultCoverageDescription         coverage = new DefaultCoverageDescription();
         final DefaultImageDescription            image    = new DefaultImageDescription();
         final DefaultMetadata                    metadata = new DefaultMetadata();
-        features.setFeatureCatalogueCitations(Collections.singleton(new DefaultCitation("Shapefile")));
+        features.setFeatureCatalogueCitations(Set.of(new DefaultCitation("Shapefile")));
         features.setIncludedWithDataset(Boolean.TRUE);
         metadata.getContentInfo().add(features);
 
@@ -66,7 +67,7 @@ public final strictfp class MergerTest extends TestCase {
         image.setCloudCoverPercentage(0.8);
         metadata.getContentInfo().add(image);
 
-        metadata.setLocalesAndCharsets(Collections.singletonMap(Locale.JAPANESE, StandardCharsets.UTF_16));
+        metadata.setLocalesAndCharsets(Map.of(Locale.JAPANESE, StandardCharsets.UTF_16));
         return metadata;
     }
 
@@ -81,11 +82,11 @@ public final strictfp class MergerTest extends TestCase {
         image.setProcessingLevelCode(new DefaultIdentifier("Level 2"));
         metadata.getContentInfo().add(image);
 
-        features.setFeatureCatalogueCitations(Collections.singleton(new DefaultCitation("GPX file")));
+        features.setFeatureCatalogueCitations(Set.of(new DefaultCitation("GPX file")));
         features.setIncludedWithDataset(Boolean.TRUE);
         metadata.getContentInfo().add(features);
 
-        metadata.setLocalesAndCharsets(Collections.singletonMap(Locale.FRENCH, StandardCharsets.UTF_8));
+        metadata.setLocalesAndCharsets(Map.of(Locale.FRENCH, StandardCharsets.UTF_8));
         return metadata;
     }
 
@@ -100,9 +101,9 @@ public final strictfp class MergerTest extends TestCase {
         final Merger merger = new Merger(null);
         merger.copy(source, target);
 
-        assertSetEquals(Arrays.asList(Locale.JAPANESE, Locale.FRENCH),
+        assertSetEquals(List.of(Locale.JAPANESE, Locale.FRENCH),
                         target.getLocalesAndCharsets().keySet());
-        assertSetEquals(Arrays.asList(StandardCharsets.UTF_16, StandardCharsets.UTF_8),
+        assertSetEquals(List.of(StandardCharsets.UTF_16, StandardCharsets.UTF_8),
                         target.getLocalesAndCharsets().values());
 
         final Iterator<ContentInformation> it       = target.getContentInfo().iterator();
