@@ -18,7 +18,6 @@ package org.apache.sis.metadata.iso.citation;
 
 import java.util.Set;
 import java.util.List;
-import java.util.Arrays;
 import java.util.Locale;
 import java.util.Collection;
 import java.util.Collections;
@@ -290,7 +289,7 @@ public final strictfp class CitationsTest extends TestCase {
         final Identifier ogc = new Id("OGC", "06-042");
         final Identifier iso = new Id("ISO", "19128");
         final DefaultCitation citation = new DefaultCitation("Web Map Server");
-        citation.setIdentifiers(Arrays.asList(ogc, iso, new DefaultIdentifier("Foo", "06-042", null)));
+        citation.setIdentifiers(List.of(ogc, iso, new DefaultIdentifier("Foo", "06-042", null)));
         assertTrue ("With full identifier",  Citations.identifierMatches(citation, ogc, ogc.getCode()));
         assertTrue ("With full identifier",  Citations.identifierMatches(citation, iso, iso.getCode()));
         assertFalse("With wrong code",       Citations.identifierMatches(citation, new Id("ISO", "19115"), "19115"));
