@@ -19,7 +19,6 @@ package org.apache.sis.internal.storage.gpx;
 import java.util.Map;
 import java.util.Iterator;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.parameter.ParameterDescriptorGroup;
 import org.opengis.parameter.ParameterValueGroup;
 import org.apache.sis.feature.AbstractAttribute;
@@ -79,6 +78,7 @@ final class GroupAsPolylineOperation extends AbstractOperation {
     /**
      * The expected result type to be returned by {@link #getResult()}.
      */
+    @SuppressWarnings("serial")
     private final DefaultAttributeType<?> result;
 
     /**
@@ -101,8 +101,8 @@ final class GroupAsPolylineOperation extends AbstractOperation {
      * @param  geometries  accessor to the geometry implementation in use (Java2D, ESRI or JTS).
      */
     static <G> DefaultAttributeType<? extends G> getResult(final Geometries<G> geometries) {
-        return new DefaultAttributeType<>(Collections.singletonMap(NAME_KEY, AttributeConvention.ENVELOPE_PROPERTY),
-                geometries.polylineClass, 1, 1, null);
+        return new DefaultAttributeType<>(Map.of(NAME_KEY, AttributeConvention.ENVELOPE_PROPERTY),
+                                          geometries.polylineClass, 1, 1, null);
     }
 
     /**
