@@ -16,7 +16,7 @@
  */
 package org.apache.sis.internal.storage.gpx;
 
-import java.util.Arrays;
+import java.util.List;
 import java.net.URI;
 import java.net.URISyntaxException;
 import org.apache.sis.test.DependsOn;
@@ -101,12 +101,12 @@ public final strictfp class MetadataTest extends TestCase {
         metadata.author      = person;
         metadata.creator     = "DataProducer";
         metadata.copyright   = copyright;
-        metadata.keywords    = Arrays.asList("sample", "metadata");
+        metadata.keywords    = List.of("sample", "metadata");
         metadata.bounds      = bounds;
         metadata.time        = date("2010-03-01 00:00:00");
-        metadata.links       = Arrays.asList(new Link(new URI("http://first-address.org")),
-                                             new Link(new URI("http://second-address.org")),
-                                             new Link(new URI("http://third-address.org")));
+        metadata.links       = List.of(new Link(new URI("http://first-address.org")),
+                                       new Link(new URI("http://second-address.org")),
+                                       new Link(new URI("http://third-address.org")));
         metadata.links.get(2).type = "website";
         metadata.links.get(0).text = "first";
         return metadata;
